--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "astro": "^5.4.1",
     "gsap": "^3.12.7",
+    "i18next": "^24.2.3",
+    "i18next-http-backend": "^3.0.2",
     "locomotive-scroll": "^4.1.4"
   },
   "devDependencies": {
