--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gsap": "^3.12.7",
     "i18next": "^24.2.3",
     "i18next-http-backend": "^3.0.2",
+    "lenis": "^1.2.3",
     "locomotive-scroll": "^4.1.4"
   },
   "devDependencies": {
