--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "astro": "^5.5.6",
+    "astro-i18n": "^2.2.4",
     "gsap": "^3.12.7",
     "i18next": "^24.2.3",
     "i18next-http-backend": "^3.0.2",
