--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/node": "^9.1.3",
+    "@lloydjatkinson/astro-snipcart": "^0.3.0",
+    "@lloydjatkinson/astro-snipcart-design-system": "^0.3.0",
     "astro": "^5.5.6",
     "astro-i18n": "^2.2.4",
     "gsap": "^3.12.7",
