--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -1,6 +1,6 @@
 backend:
   name: github  # or gitlab, bitbucket
-  repo: https://github.com/SzymonMirek/FantasticaEnsemble  # e.g., my-org/my-site
+  repo: SzymonMirek/FantasticaEnsemble  # e.g., my-org/my-site
   branch: main
 
 media_folder: "static/uploads"  # or your preferred media folder path
