--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -1,9 +1,8 @@
 backend:
-  name: git-gateway
+  name: github
+  repo: SzymonMirek/FantasticaEnsemble
   branch: main
-  # name: github  # or gitlab, bitbucket
-  # repo: SzymonMirek/FantasticaEnsemble  # e.g., my-org/my-site
-  # branch: main
+  auth_type: implicit # For Cloudflare Pages
 
 
 media_folder: "static/uploads"  # or your preferred media folder path
