--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -1,8 +1,10 @@
 backend:
-  name: github
-  repo: SzymonMirek/FantasticaEnsemble
-  branch: main
-  auth_type: implicit # For Cloudflare Pages
+  name: git-gateway
+  branch: main # or your preferred branch
+  # name: github
+  # repo: SzymonMirek/FantasticaEnsemble
+  # branch: main
+  # auth_type: implicit # For Cloudflare Pages
 
 
 media_folder: "static/uploads"  # or your preferred media folder path
