--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -1,9 +1,7 @@
 backend:
-  name: git-gateway
-  branch: main # or your preferred branch
-  # name: github
-  # repo: SzymonMirek/FantasticaEnsemble
-  # branch: main
+  name: github
+  repo: SzymonMirek/FantasticaEnsemble
+  branch: main
   # auth_type: implicit # For Cloudflare Pages
 
 
