--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -1,8 +1,8 @@
 backend:
   name: github
   repo: SzymonMirek/FantasticaEnsemble
-  branch: main
-  auth_type: implicit # For Cloudflare Pages
+  # branch: main 
+  # auth_type: implicit # For Cloudflare Pages
 
 
 media_folder: "static/uploads"  # or your preferred media folder path
