--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -1,8 +1,9 @@
 backend:
   name: github
   repo: SzymonMirek/FantasticaEnsemble
-  # branch: main 
-  # auth_type: implicit # For Cloudflare Pages
+  branch: main
+  base_url: https://www.fantasticaensemble.com
+  auth_endpoint: oauth
 
 
 media_folder: "static/uploads"  # or your preferred media folder path
