--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -2,8 +2,10 @@ backend:
   name: github
   repo: SzymonMirek/FantasticaEnsemble
   branch: main
-  # base_url: https://www.fantasticaensemble.com/
-  # auth_endpoint: oauth
+  auth_type: implicit # Required for GitHub backend
+  api_root: https://api.github.com
+  base_url: https://github.com
+  site_domain: www.fantasticaensemble.com
 
 
 media_folder: "static/uploads"  # or your preferred media folder path
