--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/netlify": "^6.3.1",
     "@astrojs/node": "^9.1.3",
     "astro": "^5.5.6",
     "astro-i18n": "^2.2.4",
+    "decap-cms": "^3.6.2",
     "gsap": "^3.12.7",
     "i18next": "^24.2.3",
     "i18next-http-backend": "^3.0.2",
