--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -28,8 +28,8 @@ collections:
           - {label: "Miesiąc i Rok", name: "mR", widget: string}  # "paź<br>2025"
 
       # Other fields (preserve your class names)
+      - {label: "Repertuar", name: "nazwaWydarzenia", widget: string}
       - {label: "Nazwa wydarzenia", name: "nazwaWydarzenia", widget: string}
-      - {label: "Opis wydarzenia", name: "opisWydarzenia", widget: string}
       - {label: "Miejsce", name: "miejsceWydarzenia", widget: string}
       - {label: "Godzina", name: "czasWydarzenia", widget: string}
       - {label: "Link do wydarzenia", name: "linkWydarzenia", widget: string, required: false }
