--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@astrojs/cloudflare": "^12.5.1",
     "@astrojs/node": "^9.1.3",
+    "@astrojs/sitemap": "^3.3.1",
     "astro": "^5.5.6",
     "astro-decap-cms-oauth": "^0.5.1",
     "astro-i18n": "^2.2.4",
